src/app/pages/projects/project-summary-base/project-summary-base.scss
@use '../../../../customVariables';

mat-card-header {
  font: var(--typography-header-font-large-accent);
}

mat-card-content {
  min-height: 70vh;
  max-height: 70vh;
  overflow-y: scroll;
}

.side-by-side {
  display: flex;

  > div {
    width: 50%;
  }

  &__title {
    font: var(--typography-header-font-medium-accent);
    margin: 0;
  }

  &__summary {
    text-align: justify;
  }

  table {
    width: 100%;
  }

  //gives the table a normal border
  table, th, td {
    border: solid var(--mat-sys-on-surface) 1px;
    border-collapse: collapse;
  }

  th, td {
    padding: 5px;
  }

  @media only screen and (max-width: customVariables.$mobile-max-width) {
    flex-direction: column;

    > div {
      width: 100%;
    }
  }
}

.summary-images-container {
  padding-left: 10px;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  align-content: center;

  //necessary to keep images with different size ratios always at the correct ratio, without stretching the image
  .image-wrapper {
    width: 100%;
    height: 21.5vh;
    padding-block: 0.5vh;
    text-align: center;
    align-content: center;
  }

  img {
    max-width: 100%;
    max-height: 100%;
    height: auto;
    width: auto;
  }

  img:hover {
    cursor: pointer;
  }

  @media only screen and (max-width: customVariables.$mobile-max-width) {
    padding-left: unset;
    padding-block: 2vh;
  }
}

